--- a/server/package.json
+++ b/server/package.json
@@ -3,14 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-	"start": "node ./bin/www",
-	"dev": "nodemon ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "joi": "^17.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.6",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
+    "pg": "^8.4.1"
   }
 }
